Almost all compilation errors in code were fixed.